# monica-skills

./: .gitignore  README.md  pyproject.toml
control-flow-chart/: SKILL.md
control-flow-chart/evals/: README.md
control-flow-chart/references/: mermaid-conventions.md
control-flow-chart/scripts/: render_preview.py
control-flow-chart/templates/: preview.html
jira-ticket-ranker/: SKILL.md
jira-ticket-ranker/evals/: README.md  eval_config.yaml
jira-ticket-ranker/references/: jira-fetch.md  profile-sources.md  ranking-criteria.md  sync-targets.md
jira-ticket-ranker/templates/: report.html
pe-prep/: SKILL.md
pe-prep/docs/: 2026-06-15-design.md  2026-06-15-plan.md
pe-prep/evals/: README.md  eval_config.yaml
pe-prep/evals/scenarios/: pe-prep.yml
pe-prep/references/: profile-sources.md  synthesis-rules.md
pe-prep/templates/: agenda.md  lattice-block.md  report.html
peer-learning/: SKILL.md
peer-learning/evals/: README.md  eval_config.yaml
peer-learning/references/: curation-rubric.md  digest-design.md  flags.md  source-spine.md  substrate-contract.md  voice.md
peer-learning/templates/: digest.html
pr-review-coach/: SKILL.md
pr-review-coach/docs/: 2026-06-16-notes-panel-design.md  2026-06-16-notes-panel-plan.md
pr-review-coach/evals/: README.md  eval_config.yaml  evals.json
pr-review-coach/references/: deferrals.md  finding-schema.md  fresh-eyes.md  html-report.md  posting-recipe.md  pr-risk.md  practice-mode.md  practice-panel.md  reviewer-lens.md  usp-conventions.md
pr-review-coach/templates/: practice-panel.html  report.html
(+4 files in other folders)
